0029086: Visualization, SelectMgr_ViewerSelector - drop Owners detected only by part of Entities within Box selection